fdo#44546: Hopefully correct automatic calculation of y-axis scale.